code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_104.wast
(assert_invalid
  (module (func $type-loop-value-nested-unreachable-void-vs-num (result i32)
    (loop (block (unreachable)))
  ))
  "type mismatch"
)